Bindings/Java/src/main/java/com/oculusvr/api/OvrLibrary.java

  /**
   * Modify float property; false if property doesn't exist or is readonly.<br>
   * Original signature : <code>ovrBool ovrHmd_SetFloat(ovrHmd, const char*, float)</code><br>
   * <i>native declaration : OVR_CAPI.h:705</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_SetFloat(com.oculusvr.api.OvrLibrary.ovrHmd, java.lang.String, float)} and {@link #ovrHmd_SetFloat(com.sun.jna.Pointer, com.sun.jna.Pointer, float)} instead
   */
  @Deprecated 
  byte ovrHmd_SetFloat(Pointer hmd, Pointer propertyName, float value);
  /**
   * Modify float property; false if property doesn't exist or is readonly.<br>
   * Original signature : <code>ovrBool ovrHmd_SetFloat(ovrHmd, const char*, float)</code><br>
   * <i>native declaration : OVR_CAPI.h:705</i>
   */
  byte ovrHmd_SetFloat(OvrLibrary.ovrHmd hmd, String propertyName, float value);
  /**
   * Maximum of arraySize elements will be written.<br>
   * Original signature : <code>int ovrHmd_GetFloatArray(ovrHmd, const char*, float[], unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:710</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetFloatArray(com.oculusvr.api.OvrLibrary.ovrHmd, java.lang.String, java.nio.FloatBuffer, int)} and {@link #ovrHmd_GetFloatArray(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.ptr.FloatByReference, int)} instead
   */
  @Deprecated 
  int ovrHmd_GetFloatArray(Pointer hmd, Pointer propertyName, FloatByReference values, int arraySize);
  /**
   * Maximum of arraySize elements will be written.<br>
   * Original signature : <code>int ovrHmd_GetFloatArray(ovrHmd, const char*, float[], unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:710</i>
   */
  int ovrHmd_GetFloatArray(OvrLibrary.ovrHmd hmd, String propertyName, FloatBuffer values, int arraySize);
  /**
   * Modify float[] property; false if property doesn't exist or is readonly.<br>
   * Original signature : <code>ovrBool ovrHmd_SetFloatArray(ovrHmd, const char*, float[], unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:714</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_SetFloatArray(com.oculusvr.api.OvrLibrary.ovrHmd, java.lang.String, java.nio.FloatBuffer, int)} and {@link #ovrHmd_SetFloatArray(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.ptr.FloatByReference, int)} instead
   */
  @Deprecated 
  byte ovrHmd_SetFloatArray(Pointer hmd, Pointer propertyName, FloatByReference values, int arraySize);
  /**
   * Modify float[] property; false if property doesn't exist or is readonly.<br>
   * Original signature : <code>ovrBool ovrHmd_SetFloatArray(ovrHmd, const char*, float[], unsigned int)</code><br>
   * <i>native declaration : OVR_CAPI.h:714</i>
   */
  byte ovrHmd_SetFloatArray(OvrLibrary.ovrHmd hmd, String propertyName, FloatBuffer values, int arraySize);
  /**
   * String memory is guaranteed to exist until next call to GetString or GetStringArray, or HMD is destroyed.<br>
   * Original signature : <code>char* ovrHmd_GetString(ovrHmd, const char*, const char*)</code><br>
   * <i>native declaration : OVR_CAPI.h:720</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetString(com.oculusvr.api.OvrLibrary.ovrHmd, java.lang.String, java.lang.String)} and {@link #ovrHmd_GetString(com.sun.jna.Pointer, com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  String ovrHmd_GetString(Pointer hmd, Pointer propertyName, Pointer defaultVal);
  /**
   * String memory is guaranteed to exist until next call to GetString or GetStringArray, or HMD is destroyed.<br>
   * Original signature : <code>char* ovrHmd_GetString(ovrHmd, const char*, const char*)</code><br>
   * <i>native declaration : OVR_CAPI.h:720</i>
   */
  String ovrHmd_GetString(OvrLibrary.ovrHmd hmd, String propertyName, String defaultVal);
  /**
   * Can be used to check existence of a property.<br>
   * Original signature : <code>int ovrHmd_GetArraySize(ovrHmd, const char*)</code><br>
   * <i>native declaration : OVR_CAPI.h:725</i><br>
   * @deprecated use the safer methods {@link #ovrHmd_GetArraySize(com.oculusvr.api.OvrLibrary.ovrHmd, java.lang.String)} and {@link #ovrHmd_GetArraySize(com.sun.jna.Pointer, com.sun.jna.Pointer)} instead
   */
  @Deprecated 
  int ovrHmd_GetArraySize(Pointer hmd, Pointer propertyName);
  /**
   * Can be used to check existence of a property.<br>
   * Original signature : <code>int ovrHmd_GetArraySize(ovrHmd, const char*)</code><br>
   * <i>native declaration : OVR_CAPI.h:725</i>
   */
  int ovrHmd_GetArraySize(OvrLibrary.ovrHmd hmd, String propertyName);
  public static class ovrHmd extends PointerType {
    public ovrHmd(Pointer address) {
      super(address);
    }
    public ovrHmd() {
      super();
    }
  };
}
